[B]1.0.1[/B]
- Added retriever function in client module

[B]1.0.0[/B]
- Initial version